--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1.0"
 # Security
 argon2 = "0.5"
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
+sha2 = "0.10"
 uuid = { version = "1.7", features = ["v4", "serde"] }
 
 # Utilities
